# rig-redis-vectorstore

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
examples/: vector_search_redis.rs
src/: filter.rs  lib.rs
tests/: filter_tests.rs  integration_tests.rs
